feat: Delete campaign
